[package]
name = "ecs-manage"
version = "0.1.2"
authors = ["Jonathan Morley <jmorley@cvent.com>"]

[dependencies]
structopt = "0.2.10"
rusoto_application_autoscaling = "0.42.0"
rusoto_core = "0.42.0"
rusoto_credential = "0.42.0"
rusoto_ecr = "0.42.0"
rusoto_ecs = "0.42.0"
rusoto_elbv2 = "0.42.0"
failure = "0.1.8"
backoff = "0.1.2"
log = "0.4.14"
stderrlog = "0.5.1"
maplit = "1.0.2"
itertools = "0.10.1"
serde = "1.0.127"
serde_json = "1.0.66"
clap = "2.33.3"

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.35", features = ["vendored"] }
